refactor: 리스트 첫 요소 JDK 21 기능 적용